--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.30MB/s(Youtube:不良林), server: 150.230.4.136, port: 11151, type: vmess, uuid: 18ef8b86-5dfe-48a9-b4e4-b5f595f7e555, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.72MB/s(Youtube:不良林), server: 129.226.95.71, port: 56916, type: vmess, uuid: 29d4cfd8-9aea-4796-9320-b2b9234fc141, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: us24058.cloudmatrix.xyz, port: 24058, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us24058.cloudmatrix.xyz}}
-  - {name: 未知国家-1.06MB/s(Youtube:不良林), server: v4.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v4.ssrsub.com}}
-  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: u4.anmu.one, port: 16199, type: vmess, uuid: 07ec59da-18ad-4224-8ad9-c5a66b1447a9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.64MB/s(Youtube:不良林), server: jp2802.cloudmatrix.xyz, port: 2802, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jp2802.cloudmatrix.xyz}}
-  - {name: 🇸🇬 新加坡-2.29MB/s(Youtube:不良林), server: 129.226.214.101, port: 51332, type: vmess, uuid: 6951282c-94d5-4f5d-cbc5-1e97f90bfe39, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇯🇵 日本-21.48MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.65MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-416.6KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-2.88MB/s(Youtube:不良林), server: 129.226.95.188, port: 20792, type: vmess, uuid: b7335dae-b946-46ae-f341-acbf8df21c86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.34MB/s(Youtube:不良林), server: 150.230.4.136, port: 11151, type: vmess, uuid: 18ef8b86-5dfe-48a9-b4e4-b5f595f7e555, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-428.9KB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
+  - {name: 🇨🇳 中国-722.6KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇯🇵 日本-19.41MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
