--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇯🇵 日本-16.14MB/s(Youtube:不良林), server: 35.77.93.10, port: 62161, type: vmess, uuid: 2b9a17a4-ec71-4629-8564-05fcf9b6e3a7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: us24058.cloudmatrix.xyz, port: 24058, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us24058.cloudmatrix.xyz}}
+  - {name: 🇺🇸 美国-1012.3KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 乌克兰-2.71MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
   - {name: 🇯🇵 日本-21.48MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.65MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-416.6KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇸🇬 新加坡-2.88MB/s(Youtube:不良林), server: 129.226.95.188, port: 20792, type: vmess, uuid: b7335dae-b946-46ae-f341-acbf8df21c86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.34MB/s(Youtube:不良林), server: 150.230.4.136, port: 11151, type: vmess, uuid: 18ef8b86-5dfe-48a9-b4e4-b5f595f7e555, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-428.9KB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
-  - {name: 🇨🇳 中国-722.6KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇯🇵 日本-19.41MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc4.98848.xyz, port: 26995, type: vmess, uuid: 39c8ee80-37eb-4af2-a5aa-fdf294162fcd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /@/YouTube-bai-piao-wang-zhe, ws-headers: {Host: bai-piao-wang-zhe-iplc4.98848.xyz}}
+  - {name: 未知国家-1.35MB/s(Youtube:不良林), server: awsxjp.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: awsxjp.moonfree.top}}
+  - {name: 未知国家-434.7KB/s(Youtube:不良林), server: v4.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v4.ssrsub.com}}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
+      - 乌克兰-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 未知国家-1.35MB/s(Youtube:不良林)
+      - 未知国家-434.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
+      - 乌克兰-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 未知国家-1.35MB/s(Youtube:不良林)
+      - 未知国家-434.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
+      - 乌克兰-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 未知国家-1.35MB/s(Youtube:不良林)
+      - 未知国家-434.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
+      - 乌克兰-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 未知国家-1.35MB/s(Youtube:不良林)
+      - 未知国家-434.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
+      - 乌克兰-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 未知国家-1.35MB/s(Youtube:不良林)
+      - 未知国家-434.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
+      - 乌克兰-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 未知国家-1.35MB/s(Youtube:不良林)
+      - 未知国家-434.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
+      - 乌克兰-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-722.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 未知国家-1.35MB/s(Youtube:不良林)
+      - 未知国家-434.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
