--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.70MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 3b1c107c-de9f-11ec-871a-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇯🇵 日本-218.0KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-472.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇯🇵 日本-6.93MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 未知国家-692.0KB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
-  - {name: 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-405.4KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇨🇳 中国-6.54MB/s(Youtube:不良林), server: h890361.droplet.today, port: 13545, type: trojan, password: 26bae9b023, sni: h890361.droplet.today, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: h961684.droplet.today, port: 13445, type: trojan, password: 26bae9b023, sni: h961684.droplet.today, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-380.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 未知国家-2.35MB/s(Youtube:不良林), server: v4.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v4.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-311.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇯🇵 日本-11.26MB/s(Youtube:不良林), server: 35.77.93.10, port: 62161, type: vmess, uuid: 2b9a17a4-ec71-4629-8564-05fcf9b6e3a7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.93MB/s(Youtube:不良林)
-      - 未知国家-692.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-380.5KB/s(Youtube:不良林)
+      - 未知国家-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-311.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.93MB/s(Youtube:不良林)
-      - 未知国家-692.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-380.5KB/s(Youtube:不良林)
+      - 未知国家-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-311.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.93MB/s(Youtube:不良林)
-      - 未知国家-692.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-380.5KB/s(Youtube:不良林)
+      - 未知国家-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-311.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.93MB/s(Youtube:不良林)
-      - 未知国家-692.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-380.5KB/s(Youtube:不良林)
+      - 未知国家-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-311.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.93MB/s(Youtube:不良林)
-      - 未知国家-692.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-380.5KB/s(Youtube:不良林)
+      - 未知国家-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-311.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.93MB/s(Youtube:不良林)
-      - 未知国家-692.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-380.5KB/s(Youtube:不良林)
+      - 未知国家-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-311.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.93MB/s(Youtube:不良林)
-      - 未知国家-692.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-380.5KB/s(Youtube:不良林)
+      - 未知国家-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-311.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
